added the buttons and form. Now to complete 3 and 4.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
 
   </head>
   <body>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary" id="catBtn">Cats</button>
+      <button type="button" class="btn btn-primary" id="dogBtn">Dogs</button>
+      <button type="button" class="btn btn-primary" id="dinoBtn">Dinos</button>
+      <button type="button" class="btn btn-primary" id="allPetsBtn">All Pets</button>
+      <!--
+      <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">  Pet Selection </button>
+        <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <li class="dropdown-item"><button type="button" class="btn btn-primary" id="allPetsBtn">All PetsDropdown link</button></li>
+        </ul>-->
+    </div>
+
     <div id="PetCards"></div>
+
+    <form class="petsForm">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
     <script src="scripts/main.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
