--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="petCards"></div>
 
-    <form id="petsForm">
+    <form class="petsForm" id="petsForm">
 
       <div class="mb-3">
         <label class="form-label">Name:</label>
